--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ This is an internal project for a client where the client needed to make use of 
                             <hr class="divider" />
                             <div class="item row">
                                 <a class="col-md-4 col-sm-4 col-xs-12" href="https://www.sminq.com/" target="_blank">
-                                <img class="img-responsive project-image" src="assets/images/projects/project-5.png" alt="Sminq" />
+                                <img class="img-responsive project-image" src="assets/images/projects/project-5.jpg" alt="Sminq" />
                                 </a>
                                 <div class="desc col-md-8 col-sm-8 col-xs-12">
                                     <h3 class="title"><a href="https://www.sminq.com" target="_blank">Sminq - See Me In No Queue</a></h3>
