--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@ I also like to dream, dance, listen music , bikes rides and adventure sports.
                         <div class="content">
 
                             <div class="item featured text-center">
-                                <h3 class="title"><a href="#" target="_blank">Mobile Based Billing Software</a></h3>
-                                <p class="summary">An Android app for billing and printing </p>
+                                <h3 class="title text-left"><a href="#" target="_blank">Mobile Based Billing Software</a></h3>
+                                <p class="summary text-left">An Android app for billing and printing </p>
                                 <!-- <div class="featured-image">
                                     <a href="http://themes.3rdwavemedia.com/website-templates/responsive-bootstrap-theme-for-products-velocity/" target="_blank">
                                     <img class="img-responsive project-image" src="assets/images/projects/project-featured.png" alt="project name" />
